--- a/resistor.css
+++ b/resistor.css
@@ -9,3 +9,26 @@
 .nav-pills > li.active > a, .nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
   background-color: #8BABC6;
 }
+
+.res-band{
+  border: 1px solid black;
+  border-radius: 3px;
+  padding-top: 4.5em;
+}
+
+.band-container > .col-xs-2, .col-xs-1{
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+.res-one, .res-three{
+  background-color: red;
+}
+
+.res-two{
+  background-color: yellow;
+}
+
+.res-tol{
+  background-color:gold;
+}
