--- a/resistor.css
+++ b/resistor.css
@@ -1,34 +1,34 @@
-.tab-pane {
-  padding-top: 30px
+.input-superlg{
+  height:68px;
+  font-size:40px;
 }
 
-.results {
-  padding-top: 30px
+.input-verylg{
+  height:60px;
+  font-size:22px;
 }
 
-.nav-pills > li.active > a, .nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
-  background-color: #8BABC6;
+.row.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+.row.no-gutters > [class^="col-"],
+.row.no-gutters > [class*=" col-"] {
+  padding-right: 0;
+  padding-left: 0;
 }
 
-.res-band{
-  border: 1px solid black;
-  border-radius: 3px;
-  padding-top: 4.5em;
+.row {
+  margin-top:20px;
 }
 
-.band-container > .col-xs-2, .col-xs-1{
-  padding-right: 5px;
-  padding-left: 5px;
+.mg-lg-spacer {
+  width: 50%;
+  margin-left: auto;
+  border-left: 1px solid #ccc;
+  height: 60px;
 }
 
-.res-one, .res-three{
-  background-color: red;
-}
-
-.res-two{
-  background-color: yellow;
-}
-
-.res-tol{
-  background-color:gold;
+hr {
+  border-color: #ccc;
 }
