--- a/resistor.css
+++ b/resistor.css
@@ -1,3 +1,15 @@
+.container {
+  margin-bottom:20px;
+}
+
+#features {
+  font-size:12px;
+}
+
+.indent {
+  margin-left:30px;
+}
+
 .input-superlg{
   height:68px;
   font-size:40px;
@@ -19,13 +31,13 @@
 }
 
 .input-row {
-  margin-bottom:20px;
+  margin-bottom:25px;
 }
 
 .mg-lg-spacer {
   width: 50%;
   margin-left: auto;
-  border-left: 1px solid #ccc;
+  border-left: 2px solid rgb(75, 75, 75);
   height: 60px;
 }
 
@@ -52,7 +64,7 @@
 }
 
 hr {
-  border-color: #ccc;
+  border: 1px solid rgb(75, 75, 75);
 }
 
 header {
@@ -73,8 +85,8 @@ body {
 }
 
 h1 {
-  font-size:39px;
-  margin-bottom:0px;
+  font-size:38px;
+  margin-bottom:2px;
 }
 
 #signature-column{
@@ -105,6 +117,33 @@ input {
   touch-action: manipulation;
 }
 
-.btn-link{
+.btn-link {
   padding: 3px;
+}
+
+.btn-default {
+  color: #b3b3b3;
+  background: rgb(75, 75, 75) none repeat scroll 0% 0%;
+  border: 1px solid rgb(36, 36, 36);
+}
+
+#real-value{
+  float:right;
+}
+
+.btn-default:hover {
+  color: white;
+  background: rgb(96, 96, 96) none repeat scroll 0% 0%;
+  border: 1px solid rgb(36, 36, 36);
+}
+
+.form-control {
+  border-color: #454545;;
+}
+
+.form-control:focus {
+    border-color: #a1a1a1;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(150,150,150,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(150,150,150,.6);
 }
