--- a/resistor.css
+++ b/resistor.css
@@ -7,10 +7,6 @@
   margin-top:30px;
 }
 
-#series {
-  color: #b3b3b3;
-}
-
 .indent {
   margin-left:30px;
 }
@@ -127,7 +123,7 @@ input {
 }
 
 .btn-default {
-  color: #b3b3b3;
+  color: #E4E4E4;
   background: rgb(75, 75, 75) none repeat scroll 0% 0%;
   border: 1px solid rgb(36, 36, 36);
 }
@@ -137,7 +133,7 @@ input {
 }
 
 .btn-default:hover {
-  color: white;
+  color: #E4E4E4;
   background: rgb(96, 96, 96) none repeat scroll 0% 0%;
   border: 1px solid rgb(36, 36, 36);
 }
